# kwast

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  run_tests
kernel/: Cargo.toml  Makefile  bochsrc  run_tests
kernel/.cargo/: config.toml
kernel/src/: lib.rs  macros.rs  mem.rs  pmm.rs
kernel/src/arch/: asid.rs  cpu_data.rs  mod.rs  tasking.rs
kernel/src/arch/acpi/: hpet.rs  mod.rs  sdt.rs
kernel/src/arch/x86_64/: address.rs  atomic.rs  context_switch.s  cpuid.rs  grub.cfg  interrupts.rs  link.ld  macros.rs  mboot.s  mem.rs  mem_funcs.s  mod.rs  port.rs  qemu.rs  serial.rs  simd.rs  target.json  tasking.rs  thread_trampoline.s  vga_text.rs  wasm_trampoline.s
kernel/src/arch/x86_64/paging/: entry.rs  frame.rs  mem.rs  mod.rs  table.rs
kernel/src/mm/: alloc.rs  avl_interval_tree.rs  buddy.rs  interval_tree.rs  mapper.rs  mod.rs  pmm.rs  process_heap_assigner.rs  tcb_alloc.rs  vma_allocator.rs
kernel/src/sync/: atomic.rs  atomic_hle.rs  cond_var_single.rs  mod.rs  spinlock.rs  thread_block_guard.rs  wait_queue.rs
kernel/src/tasking/: file.rs  mod.rs  protection_domain.rs  scheduler.rs  scheme.rs  scheme_container.rs  thread.rs
kernel/src/tests/: buddy_test.rs  heap_assigner_test.rs  heap_test.rs  interval_tree_test.rs  mem_test.rs  mod.rs  vmm_test.rs
kernel/src/util/: boot_module.rs  font.rs  lfb_text.rs  macros.rs  mem_funcs.rs  mod.rs  nibble_array.rs  tar.rs  unchecked.rs
kernel/src/wasm/: file.rs  func_env.rs  main.rs  mod.rs  module_env.rs  reloc_sink.rs  runtime.rs  table.rs  vmctx.rs  wasi.rs
kernel/src/wasm/wasi/: definitions.rs  mod.rs
kernel/wasm/: module_env.rs  reloc_sink.rs
lib/wasm-call/: Cargo.toml
lib/wasm-call/src/: lib.rs
toolchain/: SHA256SUMS  disassemble_hexdump.py  setup_cross_binutils.sh
userspace/: Cargo.toml
userspace/wasm-test/: Cargo.toml
userspace/wasm-test/src/: main.rs
wasm_samples/: fac.wasm  fac.wat  fibonacci_mem.wasm  fibonacci_mem.wat  global_test.wasm  global_test.wat  heap_out_of_bounds.wasm  heap_out_of_bounds.wat  hello.wasm  indirect_call.wasm  indirect_call.wat  memory_size_grow.wasm  memory_size_grow.wat  stack_overflow.wasm  stack_overflow.wat  sum.wasm  syscall_test.wasm  syscall_test.wat
wasm_test/: Cargo.toml
wasm_test/samples/: memory_and_start.wasm  memory_and_start.wat  sum.wat
wasm_test/src/: main.rs
wasm_test/src/process/: func_env.rs  mod.rs  module_env.rs  reloc_sink.rs
