[package]
name = "kernel"
version = "0.1.0"
authors = ["nielsdos <7771979+nielsdos@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
integration-test = []
test-vmm = []
test-buddy = []
test-heap-one-alloc = []
test-heap-big-alloc = []
test-heap-realloc = []
test-heap-pointers = []
test-interval-tree-tests = []
test-interval-tree = ["test-interval-tree-tests"]
test-interval-tree-fragments = ["test-interval-tree-tests"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[dependencies]
volatile = "^0.2.6"
spin = "^0.5.2"
bit_field = "^0.10.0"
bitflags = "^1.2.1"
multiboot2 = "^0.8.1"
lazy_static = { version = "^1.3.0", features = ["spin_no_std"] }
cranelift-wasm = { git = "https://github.com/nielsdos/cranelift", default-features = false, features = ["core"] }
cranelift-codegen = { git = "https://github.com/nielsdos/cranelift", default-features = false, features = ["core"] }
cranelift-native = { git = "https://github.com/nielsdos/cranelift", default-features = false, features = ["core"] }

[replace]
"wasmparser:0.48.2" = { git = "https://github.com/nielsdos/wasmparser", "branch" = "0.48.2" }
