[package]
name = "kernel"
version = "0.1.0"
authors = ["nielsdos <7771979+nielsdos@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
integration-test = []
test-vmm = []
test-buddy = []
test-heap-one-alloc = []
test-heap-big-alloc = []
test-heap-realloc = []
test-heap-pointers = []
test-interval-tree-tests = []
test-interval-tree = ["test-interval-tree-tests"]
test-interval-tree-fragments = ["test-interval-tree-tests"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[dependencies]
wasm-call = { path = "../lib/wasm-call" }
raw-cpuid = "^7.0"
volatile = "^0.2.6"
bit_field = "^0.10.0"
bitflags = "^1.2.1"
multiboot2 = "^0.8.1"
lazy_static = { version = "^1.4.0", features = ["spin_no_std"] }
hashbrown = "^0.7.0"
memoffset = "0.5"
cranelift-wasm = { git = "https://github.com/kwast-os/wasmtime", package="cranelift-wasm", branch = "0.62.0", default-features = false, features = ["core"] }
cranelift-codegen = { git = "https://github.com/kwast-os/wasmtime", package="cranelift-codegen", branch = "0.62.0", default-features = false, features = ["core"] }
cranelift-native = { git = "https://github.com/kwast-os/wasmtime", package="cranelift-native", branch = "0.62.0", default-features = false, features = ["core"] }

[replace]
"wasmparser:0.51.4" = { git = "https://github.com/kwast-os/wasmparser", "branch" = "0.51.4" }
