[package]
name = "kernel"
version = "0.1.0"
authors = ["nielsdos <7771979+nielsdos@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
integration-test = []
test-vmm = []
test-buddy = []
test-heap-one-alloc = []
test-heap-big-alloc = []
test-heap-realloc = []
test-heap-pointers = []
test-interval-tree-tests = []
test-interval-tree = ["test-interval-tree-tests"]
test-interval-tree-fragments = ["test-interval-tree-tests"]

[profile.dev]
opt-level = "z"
panic = "abort"

[profile.release]
lto = true
opt-level = 2
codegen-units = 1
panic = "abort"

[dependencies]
static_assertions = "1.1.0"
atomic = { version = "0.4", features = ["nightly"] } # 0.5 seems to have a bug where it doesn't detect the atomic types properly
wasm-call = { path = "../lib/wasm-call" }
raw-cpuid = "^7.0"
bitflags = "^1.2.1"
multiboot2 = "^0.8.1"
spin = "0.5"
lazy_static = { version = "^1.4.0", features = ["spin_no_std"] }
hashbrown = "^0.8.0"
memoffset = "0.5"
cranelift-wasm = { git = "https://github.com/kwast-os/wasmtime", package="cranelift-wasm", branch = "main", default-features = false, features = ["core"] }
cranelift-codegen = { git = "https://github.com/kwast-os/wasmtime", package="cranelift-codegen", branch = "main", default-features = false, features = ["core"] }
cranelift-native = { git = "https://github.com/kwast-os/wasmtime", package="cranelift-native", branch = "main", default-features = false, features = ["core"] }

[replace]
"wasmparser:0.59.0" = { git = "https://github.com/kwast-os/wasm-tools", "branch" = "0.59.0" }
"spin:0.5.2" = { git = "https://github.com/kwast-os/spin-rs", rev = "434b4f9" }
