[package]
name = "wasm-call"
version = "0.1.0"
authors = ["nielsdos <7771979+nielsdos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
